--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Alkalami&family=Montserrat:wght@200;400;500;700;900&display=swap");
+:root {
+  --primaryColor: hsl(14, 98%, 53%);
+  --primaryColorLight: ■hsl(14, 96%, 91%);
+  --bgColor: Ihsl(0, 0%, 100%);
+  --formColor: ■hsl(20, 42%, 87%);
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: Ohsl(0, 0%, 18%);
+  --greyText: Ihsl(0, 0%, 51%);
+  --inputColor: ■hsl(330, 12%, 97%);
+  --cardColor: hsl(300, 3%, 94%);
+
+  --biggestFontSize: 2.5rem;
+  --h1FontSize: 2rem;
+  --h2FontSize: 1.25rem;
+  --h3FontSize: 1rem;
+  --normalFontSize: 0.938rem;
+  --smallFontSize: 0.813rem;
+  --smallestFontSize: 0.75rem;
+  --borderRadius: 3rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  background: var(--bgColor);
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+p {
+  font-size: var(--smallFontSize);
+}
+html {
+  font-size: 90%;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+  color: antiquewhite;
+}
+
+.icon {
+  font-size: var(--h2FontSize);
+  color: antiquewhite;
+  cursor: pointer;
+}
+
+img,
+video {
+  height: auto;
+  width: 100%;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: var(--borderRadius);
+  padding: 0.8rem 1rem;
+  color: var(--whiteColor);
+  background: var(--primaryColor);
+}
+
+&:hover {
+  transition: 0.3s ease;
+}
+
+.secTitle {
+  display: none;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: var(--blackColor);
+  flex-direction: column;
+  gap: 1rem;
+}
+p {
+  color: var(--blackColor);
+  font-size: var(--normalFontSize);
+  font-weight: 400;
+}
+
+.secHeading {
+  padding-bottom: 1.5rem;
+}
+
+.btn .icon {
+  margin-left: 0.5rem;
+}
+.btn:hover {
+  color: var(--primaryColor);
+  background: antiquewhite;
+}
+
+.section {
+  padding: 4rem 0 2rem;
+}
+
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background: var(--primaryColorLight);
+}
+
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background: var(--primaryColor);
+  border-radius: var(--borderRadius);
 }
